folder for application container

--- a/app_server/Dockerfile
+++ b/app_server/Dockerfile
@@ -1,5 +1,5 @@
 FROM orchardup/python:2.7
-ADD project/requirements.pip requirements.pip
+ADD requirements.pip requirements.pip
 RUN pip install -r requirements.pip
 VOLUME ['/opt/project/']
 WORKDIR /opt/project/
